tests/ui/type-alias-impl-trait/generic_duplicate_param_use2.stderr
error[E0277]: `T` doesn't implement `Debug`
  --> $DIR/generic_duplicate_param_use2.rs:12:5
   |
LL |     t
   |     ^ the trait `Debug` is not implemented for `T`
   |
note: required by a bound in an opaque type
  --> $DIR/generic_duplicate_param_use2.rs:8:23
   |
LL | type Two<T, U> = impl Debug;
   |                       ^^^^^
note: this definition site has more where clauses than the opaque type
  --> $DIR/generic_duplicate_param_use2.rs:11:1
   |
LL | fn two<T: Debug, U>(t: T, _: U) -> Two<T, U> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: consider restricting type parameter `T` with trait `Debug`
   |
LL | type Two<T: std::fmt::Debug, U> = impl Debug;
   |           +++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
